--- a/Compose2/app/src/main/res/values/strings.xml
+++ b/Compose2/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
-<resources>
-    <string name="app_name">CleanArcitectureNote</string>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="app_name">StateCodelab</string>
+    <string name="cd_crop_square" tools:ignore="ExtraTranslation">Crop</string>
+    <string name="cd_done">Done</string>
+    <string name="cd_event">Event</string>
+    <string name="cd_privacy">Privacy</string>
+    <string name="cd_restore">Restore</string>
+    <string name="title_activity_todo">TodoActivity</string>
 </resources>
